# rpi-pico-basic-silica

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  main.cpp
